# film-parser

./: CHANGELOG.md  LICENSE  README.md  film_discovery_and_parse.py  film_discovery_report_20250904_115945.txt  film_discovery_results_20250904_115945.csv  main.py  pyproject.toml  requirements.txt  run_parser.py  ultra_reliable_parser.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
