[project]
name = "film-parser"
version = "0.1.0"
description = "Film discovery and parsing tool for ekinobilet.fond-kino.ru"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    # Core HTTP and async libraries
    "requests>=2.25.1",
    "aiohttp>=3.8.0",
    
    # HTML parsing libraries
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    
    # Browser automation
    "playwright>=1.40.0",
    
    # Data manipulation and analysis
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pytz>=2021.3",
    "python-dateutil>=2.8.2",
    "six>=1.16.0",
]
